--- a/style.css
+++ b/style.css
@@ -9,4 +9,64 @@ body {
   padding: 0;
 }
 
+header {
+  border-bottom: 8px solid hsl(0deg, 0%, 60%);
+  margin: 0;
+}
 /* Add styles here! */
+
+.intro-chunk {
+  padding-top: 88px;
+  padding-bottom: 48px;
+}
+
+.max-width-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+}
+
+.intro-chunk {
+  max-width: 424px;
+  padding-left: 24px;
+}
+
+p {
+  font-size: 20px;
+  margin: 16px 0;
+  line-height: 1.5;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+main {
+  margin: 0;
+  padding-top: 64px;
+  height: 100%;
+  background-color: hsl(0deg, 0%, 40%);
+}
+
+h1.title {
+  margin-bottom: 48px;
+}
+
+h2.indented-heading {
+  background-color: hsl(45deg, 100%, 50%);
+  margin-top: 0;
+  margin-bottom: 16px;
+  margin-left: -32px;
+  padding-left: 32px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-right: 16px;
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+  max-width: 408px;
+}
+
+.card {
+  padding: 8px 24px;
+  background-color: white;
+  border-bottom: 8px solid hsl(0deg, 0%, 60%);
+}
